--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
     <header>
         <h1>SS40 NETWORK</h1>
-        <img src="E:\social page\ss40 network.png" alt="logo">
+        <img src="ss40 network.png" alt="logo">
     </header>
     <div class="container">
         <ul class="social-links">
