--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
                 margin-right: -50px;
             }
         }
+        @media only screen and (max-width: 914px){
+            h1{
+                margin-right: -50px;
+            }
+        }
         .bodytext{
             align-items: center;
             text-align: center;
