--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
             h1{
                 margin-right: -50px;
             }
+            .pagepic{
+            width: 300px; height: 300px;
+            margin-left: 14%;
+            margin-top: 2%;
+            }
+        }
+        @media only screen and (min-width: 950px){
+            .pagepic{
+            width: 200px; height: 200px;
+            margin-left: 43%;
+            margin-top: 1%;
+            
+            }
         }
         .bodytext{
             align-items: center;
@@ -126,8 +139,7 @@
     </div>
     <div class="bodytext">
         <h3>We believe you'll join us </h3> 
-        
-
     </div>
+    <img class="pagepic" src="page pic.png" alt="page pic">
 </body>
 </html>
