--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             margin-left: 14%;
             margin-top: 2%;
             }
+             header{
+                padding-right: 50px;
+            }
+        }
         }
         @media only screen and (min-width: 950px){
             .pagepic{
