--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
     <div class="bodytext">
         <h3>We believe you'll join us </h3> 
     </div>
-    <img class="pagepic" src="page pic.png" alt="page pic">
+    <img class="pagepic" src="page pic1.png" alt="page pic">
 </body>
 </html>
